# -GrowthOperator

./:  GrowthOperator_full_project_document.md  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  feachers.md  package.json  pnpm-lock.yaml  project_implementation_plan.md  project_task_list.md
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2caf2dfb69d5_add_trend_model.py  8061b6eb979f_add_brand_model.py  896e1693016f_initial_migration.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: api.py
apps/api/app/api/v1/endpoints/: ideas.py  login.py  trends.py  users.py  workspaces.py
apps/api/app/core/: celery_app.py  config.py  logging.py  security.py
apps/api/app/crud/: __init__.py  crud_idea.py  crud_trend.py  crud_user.py  crud_workspace.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: brand.py  idea.py  publishing.py  trend.py  trend_embedding.py  user.py  workspace.py
apps/api/app/schemas/: __init__.py  idea.py  publishing.py  trend.py  user.py  workspace.py
apps/api/app/services/: content_engine.py  embedding.py
apps/web/: package.json
apps/web/src/: App.tsx
apps/web/src/features/auth/: LoginPage.tsx  SignupPage.tsx
apps/web/src/features/dashboard/: DashboardLayout.tsx
apps/web/src/features/ideas/: IdeaWorkspace.tsx
apps/web/src/features/trends/: TrendDiscovery.tsx
apps/web/src/features/workspaces/: WorkspaceListPage.tsx
apps/web/src/services/: api.ts
apps/web/src/store/: useAuthStore.ts
apps/worker/: pyproject.toml
apps/worker/app/core/: celery_app.py  config.py
apps/worker/app/models/: trend.py
apps/worker/app/scrapers/: base.py  reddit_scraper.py
apps/worker/app/tasks/: trend_tasks.py
