[project]
name = "growthoperator-api"
version = "0.1.0"
description = "API for GrowthOperator"
authors = [
    {name = "System", email = "system@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "asyncpg",
    "loguru",
    "python-dotenv",
    "psycopg2-binary",
    "pgvector (>=0.4.2,<0.5.0)",
    "openai (>=2.30.0,<3.0.0)"
]

[tool.poetry]
package-mode = false
name = "growthoperator-api"
version = "0.1.0"
description = "API for GrowthOperator"
authors = ["System <system@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.9,<0.16.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
