[project]
name = "growthoperator-worker"
version = "0.1.0"
description = "Background worker for GrowthOperator"
authors = [
    {name = "System", email = "system@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "celery",
    "redis",
    "playwright",
    "requests",
    "beautifulsoup4",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "asyncpg",
    "motor",
    "openai",
    "google-generativeai",
    "loguru",
    "python-dotenv"
]

[tool.poetry]
package-mode = false
name = "growthoperator-worker"
version = "0.1.0"
description = "Background worker for GrowthOperator"
authors = ["System <system@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
